<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.medium.tests</groupId>
    <artifactId>GatlingKafkaTests</artifactId>
    <version>1.0</version>

    <name>GatlingKafkaTests</name>

    <properties>
        <!-- Plugins -->
        <gatling-maven-plugin.version>4.6.0</gatling-maven-plugin.version>
        <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <gatling-kafka-plugin.version>0.13.0-RC2</gatling-kafka-plugin.version>

        <!-- Libraries -->
        <gatling.version>3.13.5</gatling.version>
        <gatling-kafka.version>1.0.0-RC1</gatling-kafka.version>
        <jackson-core.version>2.17.0</jackson-core.version>
        <gson.version>2.10.1</gson.version>
        <logback.version>1.4.14</logback.version>
    </properties>

    <dependencies>
        <!-- Gatling dependencies -->
        <dependency>
            <groupId>io.gatling.highcharts</groupId>
            <artifactId>gatling-charts-highcharts</artifactId>
            <version>${gatling.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-app</artifactId>
            <version>${gatling.version}</version>
            <scope>compile</scope>
        </dependency>
        <!-- Kafka plugin -->
        <dependency>
            <groupId>org.galaxio</groupId>
            <artifactId>gatling-kafka-plugin_2.13</artifactId>
            <version>${gatling-kafka.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Additional dependencies -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson-core.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-maven-plugin</artifactId>
                <version>${gatling-maven-plugin.version}</version>

                <executions>
                    <execution>
                        <id>performance-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>test</phase>
                        <configuration>
                            <!--suppress UnresolvedMavenProperty -->
                            <simulationClass>
                                org.medium.gatling.GatlingKafkaSimulation
                            </simulationClass>
                            <jvmArgs>
                                <jvmArg>--add-opens=java.base/java.time=ALL-UNNAMED</jvmArg>
                                <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
                                <jvmArg>-Dgatling.core.runDescription=Demonstration of Gatling with Kafka</jvmArg>
                            </jvmArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>
</project>
